--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heroku-react-app",
+  "name": "urban-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.7.1",
     "react-scripts": "4.0.3",
     "tailwindcss-children": "^2.1.0",
     "web-vitals": "^1.1.2"
